Change Log for OpenXava project
===============================

- New filterByContentInAnyProperty() method in Tab to filter for a string value in any column.
- New isJavaIdentifier() method in Strings utility class.
- Fix: XSS vulnerability using script injection in module URL parameters. 
- Fix: All English archetypes include a null folder in the created project.
- Fix: Drag & drop in the tree loses the children of the moved node in specific cases.
- Fix: Loading... message fixed with a @Calculation property of a reference inside a hidden section.
- Fix: Bad tree behavior when property of idProperties of @Tree has duplicated values in database.
- Fix: It's possible to add nodes to the tree with duplicate value for id property.
- Lesson 8 of the reporting course with JasperReports available in the documentation with video.
- Fix: Action labels in subcontroller not aligned correctly when actions have images of different sizes.
- Fix: Typing to change a reference in an @ElementCollection fails if the ID is not among the properties.

OpenXava 7.4.4 (2024-12-5)
--------------------------
- New projects from archetypes include links to doc, default controllers and sample code in controllers.xml.
- JSoup upgraded to 1.18.2.
- Lombok upgraded to 1.18.36.
- Log4j API and core upgraded to 2.24.2.
- Driver version in doc/new projects upgraded for Informix and Db2.
- Article about dashboard creation available in the documentation with video.
- Video for creating a project management app included in the project templates documentation article.
- Controllers reference documentation improved to include links to sample code controllers.
- Fix: @ElementCollection with @ReadOnly does not recognize the last row if it contains a boolean property.
- Fix: Saves null for the foreign key if an @ElementCollection references an entity with a hidden key.
- Fix: Calendar list format forgets the user-selected month after returning to the list from detail.