@@ -119,7 +119,7 @@
 		<view name="WithDescriptionsList"/>
 		<controller name="Typical"/>
 	</module>
-			<module name="Product3ChangeActionsOnSearch" folder="warehousing/variations">		<env-var name="XAVA_SEARCH_ACTION" value="CRUD.searchExecutingOnChange"/>						<model name="Product3"/>		<view name="WithGroup"/>		<controller name="Typical"/>		<controller name="Product3"/>		<mode-controller name="Void"/> 	</module>		<module name="Product4NotAligned" folder="warehousing/variations"> 		<model name="Product4"/>		<view name="NotAligned"/>		<controller name="Typical"/>	</module>			<module name="Product4NoDescriptionsLists" folder="warehousing/variations"> 		<model name="Product4"/>		<view name="NoDescriptionsLists"/>		<controller name="Typical"/>	</module>				<module name="Product5FamilyFromSubfamily" folder="warehousing/variations"> 		<model name="Product5"/>		<view name="FamilyFromSubfamily"/>		<controller name="Typical"/>	</module>		<module name="Product5WithGroups" folder="warehousing/variations"> 		<model name="Product5"/>		<view name="WithGroups"/>		<controller name="Typical"/>	</module>		<module name="Product6Software" folder="warehousing/variations"> 		<model name="Product6"/>		<tab name="Software"/>		<controller name="Typical"/>		<!-- tmr ini -->		<controller name="FilterByX"/>		<!-- tmr fin -->			</module>					<module name="ChangeProductsPrice" folder="warehousing">		<model name="Product"/>				<view name="Simple"/>		<controller name="Navigation"/> 		<controller name="ChangeProductsPrice"/>	</module>		<module name="ChangeProductsPrice2" folder="warehousing/variations">		<model name="Product"/>				<view name="EditPrice"/>		<controller name="Navigation"/>		<controller name="ChangeProductsPrice2"/>	</module>					<module name="Seller" folder="invoicing">		<model name="Seller"/>		<view name="Complete"/>		<controller name="Typical"/>		<controller name="ShowSellerDialog"/>	</module>		<module name="SellerRegionsWithCheckBoxes" folder="invoicing">		<model name="Seller"/>		<view name="RegionsWithCheckBoxes"/>		<controller name="Typical"/>			</module>			
+			<module name="Product3ChangeActionsOnSearch" folder="warehousing/variations">		<env-var name="XAVA_SEARCH_ACTION" value="CRUD.searchExecutingOnChange"/>						<model name="Product3"/>		<view name="WithGroup"/>		<controller name="Typical"/>		<controller name="Product3"/>		<mode-controller name="Void"/> 	</module>		<module name="Product4NotAligned" folder="warehousing/variations"> 		<model name="Product4"/>		<view name="NotAligned"/>		<controller name="Typical"/>	</module>			<module name="Product4NoDescriptionsLists" folder="warehousing/variations"> 		<model name="Product4"/>		<view name="NoDescriptionsLists"/>		<controller name="Typical"/>	</module>				<module name="Product5FamilyFromSubfamily" folder="warehousing/variations"> 		<model name="Product5"/>		<view name="FamilyFromSubfamily"/>		<controller name="Typical"/>	</module>		<module name="Product5WithGroups" folder="warehousing/variations"> 		<model name="Product5"/>		<view name="WithGroups"/>		<controller name="Typical"/>	</module>		<module name="Product6Software" folder="warehousing/variations"> 		<model name="Product6"/>		<tab name="Software"/>		<controller name="Typical"/>		<controller name="FilterByX"/>	</module>					<module name="ChangeProductsPrice" folder="warehousing">		<model name="Product"/>				<view name="Simple"/>		<controller name="Navigation"/> 		<controller name="ChangeProductsPrice"/>	</module>		<module name="ChangeProductsPrice2" folder="warehousing/variations">		<model name="Product"/>				<view name="EditPrice"/>		<controller name="Navigation"/>		<controller name="ChangeProductsPrice2"/>	</module>					<module name="Seller" folder="invoicing">		<model name="Seller"/>		<view name="Complete"/>		<controller name="Typical"/>		<controller name="ShowSellerDialog"/>	</module>		<module name="SellerRegionsWithCheckBoxes" folder="invoicing">		<model name="Seller"/>		<view name="RegionsWithCheckBoxes"/>		<controller name="Typical"/>			</module>			
 	<module name="SellerJSP" folder="invoicing.variations">
 		<model name="Seller"/>
 		<view name="ForCustomJSP"/>				<web-view url="seller.jsp"/> <!--  In the root instead of custom-jsp to test editors for that case -->		<controller name="SellerJSP"/>	</module>	
