@@ -11,18 +11,16 @@ public class Product6SoftwareTest extends CustomizeListTestBase {
 		super(testName, "Product6Software");		
 	}
 	
-	public void testBaseCondition3levelNotKeyProperties_setBaseConditionByCodeWithDefaultOrderInTab() throws Exception { // tmr _setBaseConditionByCodeWithDefaultOrderInTab
+	public void testBaseCondition3levelNotKeyProperties_setBaseConditionByCodeWithDefaultOrderInTab() throws Exception { 
 		// We also test it in WorkerTaskTest because it failed sometimes depending on the name of the properties
 		assertListRowCount(6);
 		assertListColumnCount(1); // Just one column, to test that a baseCondition bug
 		assertLabelInList(0, "Description"); // Not a property from baseCondition condition		
 		
-		// tmr ini
 		execute("FilterByX.filterByX"); 
 		assertListRowCount(2);
 		assertValueInList(0, 0, "PROVAX");
 		assertValueInList(1, 0, "XAVA");
-		// tmr fin
 	}
 	
 }
